Fix admin menu z-index when debug template paths is enabled (#1819)

--- a/skin/adminhtml/default/openmage/override.css
+++ b/skin/adminhtml/default/openmage/override.css
@@ -660,7 +660,7 @@ div.autocomplete ul li.selected {
 
 #loading-mask {
   background: rgba(0, 0, 0, 0.4);
-  z-index: 999;
+  z-index: 1000;
   color: #68666f;
   opacity: 1;
 }
